# aimarket-sdks

./: .gitignore  CONTRIBUTORS.md  README.md  SECURITY.md
.github/workflows/: ci.yml  publish-npm.yml  release.yml
dart/: CHANGELOG.md  CONTRIBUTORS.md  README.md  SECURITY.md  pubspec.yaml
dart/docs/: value.md
dart/lib/: aimarket_agent.dart
dart/lib/src/: agent.dart  eip712.dart  models.dart  signer.dart  tee_verifier.dart
dart/test/: aimarket_agent_test.dart
docs/: en.md  es.md  ru.md
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/src/: agent.rs  eip712.rs  error.rs  lib.rs  models.rs  signer.rs  tee.rs
rust/tests/: cross_sdk_vectors.rs
scripts/: verify_test_vectors.mjs
test-vectors/: debit_authorization.digest  debit_authorization.json
typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: agent.ts  eip712.ts  errors.ts  index.ts  models.ts  signer.ts  tee.ts
typescript/test/: agent.test.ts  cross_sdk_vectors.test.ts  mockFetch.ts  signer.test.ts  tee.test.ts
