[package]
name = "aimarket-agent"
version = "0.1.0"
edition = "2021"
description = "AI Market Protocol v2 consumer SDK for Rust — Tauri desktop apps, CLI tools"
repository = "https://github.com/alexar76/aimarket-sdks"
homepage = "https://github.com/alexar76/aimarket-sdks/tree/main/rust"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
